force-app/main/default/objects/NCMT_Location_Parameters__c/NCMT_Location_Parameters__c.object-meta.xml
<CustomObject>
    <description>NCMT LookupLocations for States, Cities and Locations</description>
    <label>Location Parameter</label>
    <nameField>
        <label>Location Parameter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>