force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Annual_Escalation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Escalation_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Annual Escalation Rate</description>
    <label>Annual Escalation Rate</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>