force-app/main/default/objects/NCMT_Location_Parameters__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City Name</description>
    <inlineHelpText>City Name</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>