force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Climate_Zone__c.field-meta.xml
<CustomField>
    <fullName>Climate_Zone__c</fullName>
    <description>Climate Zone</description>
    <inlineHelpText>Climate Zone</inlineHelpText>
    <label>Climate Zone</label>
    <length>2</length>
    <type>Text</type>
</CustomField>