force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Composite_Shell_TI__c.field-meta.xml
<CustomField>
    <fullName>Composite_Shell_TI__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Composite (Shell &amp; TI)</description>
    <label>Composite (Shell &amp; TI)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>