force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Enthalpy__c.field-meta.xml
<CustomField>
    <fullName>Enthalpy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enthalpy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>