force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Freeze_Depth__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Depth__c</fullName>
    <description>Freeze Depth</description>
    <inlineHelpText>Freeze Depth</inlineHelpText>
    <label>Freeze Depth</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>