force-app/main/default/objects/NCMT_Location_Parameters__c/fields/GSA_Region__c.field-meta.xml
<CustomField>
    <fullName>GSA_Region__c</fullName>
    <description>GSA Region of the location.</description>
    <inlineHelpText>GSA Region of the location.</inlineHelpText>
    <label>GSA Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>