force-app/main/default/objects/NCMT_Location_Parameters__c/fields/HDD__c.field-meta.xml
<CustomField>
    <fullName>HDD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HDD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>