force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Insolation__c.field-meta.xml
<CustomField>
    <fullName>Insolation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insolation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>