force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Location_Adjustment_DC__c.field-meta.xml
<CustomField>
    <fullName>Location_Adjustment_DC__c</fullName>
    <label>Location Adjustment - DC</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>