force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Location_Based_SIF__c.field-meta.xml
<CustomField>
    <fullName>Location_Based_SIF__c</fullName>
    <description>Location Based SIF</description>
    <inlineHelpText>Location Based SIF</inlineHelpText>
    <label>Location Based SIF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>