force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Location_Tier_for_Quality__c.field-meta.xml
<CustomField>
    <fullName>Location_Tier_for_Quality__c</fullName>
    <description>Location Tier for Quality</description>
    <inlineHelpText>Location Tier for Quality</inlineHelpText>
    <label>Location Tier for Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>