force-app/main/default/objects/NCMT_Location_Parameters__c/fields/LPOE_Tier__c.field-meta.xml
<CustomField>
    <fullName>LPOE_Tier__c</fullName>
    <description>LPOE Tier</description>
    <inlineHelpText>LPOE Tier</inlineHelpText>
    <label>LPOE Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>