force-app/main/default/objects/NCMT_Location_Parameters__c/fields/M_S_A__c.field-meta.xml
<CustomField>
    <fullName>M_S_A__c</fullName>
    <description>M&amp;S A Entered Data</description>
    <inlineHelpText>M&amp;S A Entered Data</inlineHelpText>
    <label>M&amp;S A</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>