force-app/main/default/objects/NCMT_Location_Parameters__c/fields/National_Average__c.field-meta.xml
<CustomField>
    <fullName>National_Average__c</fullName>
    <formula>( M_S_A__c +  M_S_B__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Adjustment(National Average)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>