force-app/main/default/objects/NCMT_Location_Parameters__c/fields/PLA__c.field-meta.xml
<CustomField>
    <fullName>PLA__c</fullName>
    <description>Value if Project Labor Agreement</description>
    <inlineHelpText>PLA</inlineHelpText>
    <label>PLA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>