force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Salary_Locality_Area__c.field-meta.xml
<CustomField>
    <fullName>Salary_Locality_Area__c</fullName>
    <description>Salary Locality Area</description>
    <label>Salary Locality Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>