force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>0.07</defaultValue>
    <label>Sales Tax</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>