force-app/main/default/objects/NCMT_Location_Parameters__c/fields/SB_HUB__c.field-meta.xml
<CustomField>
    <fullName>SB_HUB__c</fullName>
    <description>SB/HUB</description>
    <inlineHelpText>SB/HUB</inlineHelpText>
    <label>SB/HUB</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>