force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Standard_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Standard_Escalation__c</fullName>
    <description>Standard Escalation Entered Data</description>
    <inlineHelpText>Standard Escalation Entered Data</inlineHelpText>
    <label>Standard Escalation</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>