force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Tax_Override__c.field-meta.xml
<CustomField>
    <fullName>Tax_Override__c</fullName>
    <description>Tax Override Entered Data</description>
    <inlineHelpText>Tax Override Entered Data</inlineHelpText>
    <label>Tax Override</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>