force-app/main/default/objects/NCMT_Location_Parameters__c/fields/TI_Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>TI Cost Adjustment</description>
    <label>TI Cost Adjustment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>