force-app/main/default/objects/NCMT_Location_Parameters__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>Text(State__c) &amp;City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>