force-app/main/default/objects/NCMT_Location_Parameters__c/listViews/FY_2019.listView-meta.xml
<ListView>
    <fullName>FY_2019</fullName>
    <columns>NAME</columns>
    <columns>GSA_Region__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>M_S_A__c</columns>
    <columns>M_S_B__c</columns>
    <columns>Location_Adjustment_DC__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Freeze_Depth__c</columns>
    <columns>Location_Based_SIF__c</columns>
    <columns>Location_Tier_for_Quality__c</columns>
    <columns>State_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>FY-2019</label>
</ListView>